fix: gap cursor color if subtle

--- a/src/components/HTMLEditor/htmlEditor.css
+++ b/src/components/HTMLEditor/htmlEditor.css
@@ -233,3 +233,7 @@
 .tiptap ::selection {
     background: var(--selection);
 }
+
+.ProseMirror-gapcursor:after {
+    border-color: var(--text-primary) !important;
+}
